# medicare-analytics

./: .env.aws.example  .env.example  .gitignore  Dockerfile.airflow  Makefile  README.md  docker-compose.aws.yml  docker-compose.yml  main.py  pyproject.toml  terraform.tfstate
.github/workflows/: ci.yml
dags/: medicare_enrollment_load.py  medicare_enrollment_load_postgres.py  medicare_enrollment_pipeline_postgres.py  medicare_enrollment_pipeline_redshift.py
dags/exports/: enrollment_dashboard_export.py
dags/pipelines/: medicare_enrollment_pipeline_postgres.py  medicare_enrollment_pipeline_redshift.py
dashboards/: app.py  requirements.txt
dbt_profiles/: profiles.yml
docs/: catalog.json  manifest.json
infra/: .terraform.lock.hcl  .terraform.tfstate.lock.info  ec2.tf  iam.tf  main.tf  outputs.tf  redshift.tf  s3.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example  variables.tf  vpc.tf
medicare_dbt/: dbt_project.yml
medicare_dbt/models/marts/: mart_enrollment_by_state.sql  mart_enrollment_national.sql  schema.yml
medicare_dbt/models/staging/: schema.yml  sources.yml  stg_medicare_enrollment.sql
notebooks/: 01_explore_enrollment_data.ipynb  02_query_postgres.ipynb  03_app_testing.ipynb
src/db/init/: 01_create_airflow_db.sql
src/ingestion/: medicare_enrollment.py
src/loaders/: postgres.py  redshift.py  s3.py
