[project]
name = "medicare-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "cryptography>=46.0.5",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.47",
    "streamlit>=1.25.0",
    "altair>=4.0,<5.0",
    "watchdog>=6.0.0",
    "plotly>=6.5.2",
    "redshift-connector>=2.1.12",
]
